...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="24sp"
        android:id="@+id/question_text_view"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
                app:isVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:paddingTop="10dp"
                android:text=""
                android:id="@+id/no_comment_button"
                android:minWidth="50dp"
                android:background="@drawable/no_comment_state_list"
                android:textColor="@color/color_dark_grey_font"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/button_margin_to_border"
                android:layout_marginEnd="@dimen/button_margin_to_border"
                android:layout_alignBottom="@+id/bottom_button"
                android:layout_alignTop="@+id/top_button" />

            <de.thb.ue.android.utility.customized_classes.SingleChoiceButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text=""
                android:id="@+id/top_button"
                android:minWidth="120dp"
                android:background="@drawable/very_positive_btn_state_list"
                android:textColor="@color/color_bright_font"
                android:layout_above="@+id/upper_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/button_margin_to_border"
                android:layout_marginStart="@dimen/button_margin_to_border"
                android:layout_marginBottom="@dimen/button_choice_margin_bottom"
                android:layout_toLeftOf="@+id/no_comment_button"
...
                android:textAllCaps="false"
                android:text=""
                android:id="@+id/upper_button"
                android:background="@drawable/positive_btn_state_list"
                android:textColor="@color/color_bright_font"
                android:minWidth="120dp"
                android:layout_above="@+id/upper_middle_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/button_margin_to_border"
                android:layout_marginStart="@dimen/button_margin_to_border"
                android:layout_marginBottom="@dimen/button_choice_margin_bottom"
                android:layout_toLeftOf="@+id/no_comment_button"
...
                android:textAllCaps="false"
                android:text=""
                android:id="@+id/upper_middle_button"
                android:background="@drawable/slightly_positive_btn_state_list"
                android:textColor="@color/color_bright_font"
                android:minWidth="120dp"
                android:layout_above="@+id/middle_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/button_margin_to_border"
                android:layout_marginStart="@dimen/button_margin_to_border"
                android:layout_marginBottom="@dimen/button_choice_margin_bottom"
                android:layout_toLeftOf="@+id/no_comment_button"
...
                android:textAllCaps="false"
                android:text=""
                android:id="@+id/middle_button"
                android:background="@drawable/neutral_btn_state_list"
                android:textColor="@color/color_grey_font"
                android:minWidth="120dp"
                android:layout_above="@+id/lower_middle_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/button_margin_to_border"
                android:layout_marginStart="@dimen/button_margin_to_border"
                android:layout_marginBottom="@dimen/button_choice_margin_bottom"
                android:layout_toLeftOf="@+id/no_comment_button"
...
                android:textAllCaps="false"
                android:text=""
                android:id="@+id/lower_middle_button"
                android:background="@drawable/slightly_negative_btn_state_list"
                android:textColor="@color/color_bright_font"
                android:minWidth="120dp"
                android:layout_above="@+id/lower_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="@dimen/button_margin_to_border"
                android:layout_marginStart="@dimen/button_margin_to_border"
                android:layout_marginBottom="@dimen/button_choice_margin_bottom"
                android:layout_toLeftOf="@+id/no_comment_button"
...
