...
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
...
                    android:visibility="gone" />

                <de.thb.ue.android.utility.customized_classes.BaseButton
                    android:id="@+id/delete_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/comment_thumbnail"
                    android:layout_alignRight="@+id/comment_thumbnail"
                    android:layout_alignTop="@+id/comment_thumbnail"
                    android:visibility="gone" />

                <de.thb.ue.android.utility.customized_classes.BaseButton
                    android:id="@+id/camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:text="{faw-camera} "
                    android:textColor="@color/color_white_background"
...
