<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fhb.campusapp.eval.activities.InnerSectionActivity">

    <!--<include-->
        <!--layout="@layout/include_toolbar"-->
        <!--android:id="@+id/my_awesome_toolbar" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_subject"
        android:id="@+id/textView"
        android:layout_below="@id/my_awesome_toolbar"
        android:layout_margin="8dp"
        android:textSize="24sp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/inner_section_list_view"
        android:layout_below="@+id/textView"
        android:layout_margin="8dp">
    </ListView>

</RelativeLayout>
