<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <include
        layout="@layout/include_toolbar"
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>



    <!--<include-->
        <!--layout="@layout/include_progress_overlay"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--/>-->



    <de.fhb.campusapp.eval.custom.CustomViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_awesome_toolbar"
        android:id="@+id/button_pager">


        <android.support.v4.view.PagerTabStrip
            android:id="@+id/button_pager_tab_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"

            />
    </de.fhb.campusapp.eval.custom.CustomViewPager>

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1.0"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:background="@android:color/black"
        android:layout_below="@+id/my_awesome_toolbar" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    </FrameLayout>
</RelativeLayout>